@@ -16,11 +16,12 @@
 #include <qstatusbar.h>
 
 class QLabel;
-class QImage;
 class QProgressBar;
 
 namespace QComicBook
 {
+	class ImlibImage;
+
 	class StatusBar: public QStatusBar
 	{
 		Q_OBJECT
@@ -34,7 +35,7 @@ namespace QComicBook
 		public slots:
 			void setPage(int n, int total);
 			void setName(const QString &n);
-			void setImageInfo(const QImage *img1, const QImage *img2=NULL);
+			void setImageInfo(const ImlibImage *img1, const ImlibImage *img2=NULL);
 			void setProgress(int n, int total);
 			void clear();
 
